--- a/core/components/tableofcontentsx/docs/changelog.txt
+++ b/core/components/tableofcontentsx/docs/changelog.txt
@@ -1,5 +1,12 @@
 Changelog for TableOfContentsX package. 
 
+TableOfContentsX 1.3 - 22/02/2026
+===================================== 
+
+- Added new options to control templating, minimum and maximum headers.
+- Updated code to allow for header tags with attributes and child tags
+- Updated to work correctly with duplicate header titles
+
 TableOfContentsX 1.2 - 12/07/2019
 ===================================== 
 
